--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,8 +1,8 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # 
-    - cron: "* * * * *"
+  schedule: # “At 00:00 on Sunday.”
+    - cron: "0 0 * * 7"
   workflow_dispatch:
 
 jobs:
